--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -675,6 +675,21 @@ button {
     font-size: 2.4em;
 }
 
+@media screen and (max-width: 576px),
+       screen and (max-height: 640px) {
+    .feedback-modal {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        border: 0;
+        border-radius: 0;
+        height: 100%;
+        width: 100%;
+    }
+}
+
 @media screen and (max-height: 768px) {
     :root {
         --app-header-height: 60px;
