--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -432,7 +432,8 @@ button {
 #login-form,
 #register-form,
 #forgot-password-form,
-#reset-password-form {
+#reset-password-form,
+#contact-form {
     max-width: 460px;
     margin: auto;
 }
