--- a/frontend/src/css/pages/settings.css
+++ b/frontend/src/css/pages/settings.css
@@ -44,6 +44,40 @@
     border: 3px solid red;
 }
 
+.settings-desktop-menu-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100px;
+
+    font-size: 1.4em;
+
+    color: #fff;
+    border: 4px solid #fff;
+    border-radius: 20px;
+
+    background-color: var(--element-primary-background-color);
+    transition: background-color 0.1s ease-out;
+}
+
+.settings-desktop-menu-button.active {
+    background-color: var(--button-pink-color);
+}
+
+.settings-desktop-menu-button:not(:first-child) {
+    margin-top: 30px;
+}
+
+.settings-desktop-menu-button:hover {
+    cursor: pointer;
+}
+
+.settings-desktop-menu-button:not(.active):hover {
+    background-color: var(--element-primary-background-color-lighter);
+}
+
 @media screen and (min-width: 993px) {
     .settings-mobile-scrollable-container {
         display: flex;
