made red  hover more brighter

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -485,7 +485,7 @@ button {
 
 .button.red:hover,
 .quit-cross-button:hover {
-    background-color: #e7356a;
+    background-color: #ee2c66;
 }
 
 .button:disabled {
