--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -264,7 +264,7 @@
     margin-left: calc(var(--category-button-horizontal-margin) * -1);
     margin-right: 0;
 
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -366,7 +366,7 @@
 
 .selected-categories-list {
     max-height: 150px;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 
     margin-left: -30px;
