--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -153,8 +153,7 @@
 
 .lobby-box-categories-scrollable-container {
     height: 100%;
-    overflow-y: scroll;
-    padding-right: 10px;
+    overflow-y: auto;
 }
 
 .lobby-categories-category,
