--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -100,6 +100,13 @@
     margin-bottom: 30px;
 }
 
+.lobby-player-line-wrapper img {
+    position: relative;
+    top: 0.14em;
+    height: 1.2em;
+    margin-left: 5px;
+}
+
 .lobby-box-edit-button {
     border: 2px solid #fff;
     border-radius: 6px;
