--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -425,6 +425,18 @@
     }
 }
 
+@media screen and (max-width: 576px) {
+    .category-container-header {
+        flex-wrap: wrap;
+    }
+
+    .search-categories-input {
+        margin-top: 10px;
+        margin-left: 0;
+    }
+
+}
+
 @media screen and (max-width: 375px) {
     .category-list {
         padding-right: 35px;
