--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -264,3 +264,13 @@
         margin-bottom: 50px;
     }
 }
+
+@media screen and (max-width: 576px) {
+    .lobby-footer {
+        flex-direction: column-reverse;
+    }
+
+    .next-button {
+        margin-bottom: 10px;
+    }
+}
