Add breakpoints for cheap laptop and tablets (height settings)

--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -351,6 +351,13 @@
     bottom: 0.1em;
 }
 
+/* Cheap laptops sold with a 1080p screen but zoomed by default and resolution is 1536*864 + basic Ipad (tablets) */
+@media screen and (max-height: 864px) {
+    .question-answer-qcm-answer-container {
+        padding: 30px;
+    }
+}
+
 @media screen and (max-width: 992px) {
     .question-screen-desktop-header,
     .question-screen-desktop-footer{
