--- a/back-office/templates/base.html.twig
+++ b/back-office/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}leQuiz.io{% endblock %}</title>
+        <link rel="shortcut icon" href="/assets/icons/icon.ico" type="image/x-icon"/>
         <link rel="stylesheet"
               href="https://fonts.googleapis.com/css2?family=Lato">
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
