Fix responsive game options view scroll

--- a/frontend/src/css/pages/createGame.css
+++ b/frontend/src/css/pages/createGame.css
@@ -468,6 +468,11 @@
 
 /** CHOOSE OPTIONS */
 
+.game-options-container {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .game-options-container-main-row {
     width: 100%;
     display: flex;
