Add a min width to this breakpoint to add a min height on player sccore container

--- a/frontend/src/css/pages/question.css
+++ b/frontend/src/css/pages/question.css
@@ -352,9 +352,13 @@
 }
 
 /* Cheap laptops sold with a 1080p screen but zoomed by default and resolution is 1536*864 + basic Ipad (tablets) */
-@media screen and (max-height: 864px) {
+@media screen and (max-height: 619px) and (min-width: 1024px) {
     .question-answer-qcm-answer-container {
         padding: 30px;
+    }
+
+    .question-scores-table-item-container {
+        min-height: 25px;
     }
 }
 
