--- a/frontend/src/css/pages/lobby.css
+++ b/frontend/src/css/pages/lobby.css
@@ -27,6 +27,9 @@
 .lobby-main-data {
     flex: 1;
 
+    display: flex;
+    flex-direction: column;
+
     margin-left: 50px;
     margin-right: 50px;
 }
@@ -77,7 +80,8 @@
 }
 
 .lobby-box-players {
-    height: 100%;
+    flex: 1;
+    height: 0;
 }
 
 .lobby-box-players .lobby-box-content {
